--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -1,10 +1,11 @@
-<div class="bg-gray-light border-bottom border-gray-light">
+<div class="main-body bg-gray-light border-bottom border-gray-light">
   <div class="container text-center py-5 mb-4">
-    <img src="outside/image.jpg" class="w-100" style="max-width:200px;" />
+    <img src="img/licorne.png" class="w-200" style="max-width:400px;" />
     <div class="mt-3 mb-4">
       <h1 class="h1 mb-0">Distroless & CNB</h1>
-      <h2 class="h4 text-gray font-weight-light">Application Demo 3</h2>
+      <h2 class="h4 text-gray font-weight-light">Application Demo n°3</h2>
     </div>
+    <img src="outside/image.jpg" class="w-100" style="max-width:200px;" />
     <!--<a class="btn btn-primary mt-2" href="https://github.com/MLH/mlh-hackathon-nodejs-starter"> Check the Docs </a>-->
   </div>
 </div>
