--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -15,3 +15,21 @@
   display: inline-block;
   vertical-align: text-top;
 }
+
+html {
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  margin: 0px;
+  min-height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-body {  
+  flex-grow: 1;
+}
