--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -1,15 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-gray-dark text-white">
   <div class="container">
-    <a class="text-white link-reset text-inherit pr-3" href="/"> My Hackathon Project </a>
+    <a class="text-white link-reset text-inherit pr-3" href="/"> $$ The unicorn startup $$ </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/"> Pricing </a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Tutorials
+            Services
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="tutorial/requesting">
